--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,16 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
+    <string name="treasure0">gold</string>
+    <string name="treasure1">silver</string>
+    <string name="treasure2">rocks</string>
+    <string name="treasure3">onions</string>
+    <string name="treasure4">a lawsuit</string>
+    <string name="treasure5">a gas line</string>
+    <string name="treasure6">Korean won</string>
+    <string name="treasure7">donuts</string>
+    <string name="treasure8">a snake</string>
+    <string name="treasure9">yourself</string>
+
+
 </resources>
